--- a/chooseauni/views/index.jade
+++ b/chooseauni/views/index.jade
@@ -30,14 +30,12 @@ html(lang="en")
                     span.icon-bar: span.icon-bar: span.icon-bar
             .collapse.navbar-collapse#chooseauni-navbar
                 ul.nav.navbar-nav.navbar-right
-                    li: a(href="#chooseauni-header") About
-                    li: a(href="#chooseauni-contact") Contact
                     li.dropdown
-                        a.dropdown-toggle(href="#", data-toggle="dropdown"): b Log In<span class="caret"></span>
+                        a.dropdown-toggle(href="#", data-toggle="dropdown"): b Login<span class="caret"></span>
                         ul.dropdown-menu.dropdown-login
                             li: .row: .col-md-12: .social-buttons
                                 form(action="/api/user/login", method="post")
-                                    .form-group UserName<br />
+                                    .form-group Email Address<br />
                                         label.sr-only(for="user_email") Email Address
                                         input.form-control#user_email(type="email", name="user_email", placeholder="Email Address", required)
                                     .form-group Password<br />
@@ -46,7 +44,7 @@ html(lang="en")
                                     .form-group.login-failed-message #{login_failed}
                                     br
                                     .form-group: button.btn.btn-primary.btn-block(type="submit") Sign In
-                                    .checkbox: label <input type="checkbox"> keep me logged-in
+                                    //.checkbox: label <input type="checkbox"> keep me logged-in
 
         // Header
         a(name="chooseauni-header")
@@ -62,7 +60,4 @@ html(lang="en")
             ul.list-inline
                 li: a(href="#") Home
                 li.footer-menu-divider &sdot;
-                li: a(href="#about") About
-                li.footer-menu-divider &sdot;
-                li: a(href="#contact") Contact
                 p.copyright.text-muted.small Copyright &copy; ChooseAUni 2016. All Rights Reserved
